fixing btn spacing, removing p tag, fix daisy on works

--- a/static/css/components/buttonCta.less
+++ b/static/css/components/buttonCta.less
@@ -48,3 +48,7 @@ a.cta-btn {
 .cta-btn + form input.cta-btn, .cta-btn + .cta-btn {
   margin-top: 5px;
 }
+
+.waitinglist-message {
+  white-space: nowrap;
+}
