--- a/static/css/components/read-panel.less
+++ b/static/css/components/read-panel.less
@@ -15,6 +15,10 @@
   border-bottom: 1px solid @mid-grey;
   margin-top: 0;
 
+  .cta-btn {
+    margin-bottom: 10px;
+  }
+
   .waitinglist-message {
     margin: 0 0 10px;
     font-size: 12px;
